* Removed knx-core-test dependency for API * Removed the MockServerProjectLogic - not necessary anymore * Removed projectPath from MockServerTest - not necessary anymore (it was used by MockServerProjectLogic) * Add indication to KnxStatisticJsonSerializer + OpenAPI doc updated * Add heartbeat controller
